--- a/sismo-contracts/front/src/styles/globals.css
+++ b/sismo-contracts/front/src/styles/globals.css
@@ -1,7 +1,6 @@
 body {
   margin: 0;
-  font-family: Roboto-Medium, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: IBM Plex Sans, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -11,13 +10,13 @@ body {
 }
 
 html {
-  background: linear-gradient(285.51deg, #193970 -75.32%, #12203d 76.45%);
-  color: #ffffff;
+  background: linear-gradient(285.51deg, #FBCB4A -75.32%, #ffbb00 76.45%);
+  color: #000000;
 }
 
 p {
   margin: 0px;
-  color: white;
+  color: rgb(0, 0, 0);
 }
 
 a {
@@ -39,20 +38,20 @@ h6 {
 h1 {
   font-size: 40px;
   margin-bottom: 20px;
-  color: white;
+  color: rgb(0, 0, 0);
   text-align: center;
 }
 
 h2 {
   font-size: 28px;
   margin-bottom: 20px;
-  color: white;
+  color: rgb(0, 0, 0);
 }
 
 h3 {
   font-size: 20px;
   margin-bottom: 5px;
-  color: white;
+  color: rgb(0, 0, 0);
 }
 
 section {
@@ -90,7 +89,7 @@ li {
 }
 
 li:hover {
-  border: 1px solid rgba(255, 255, 255, 1);
+  border: 1px solid rgb(0, 0, 0);
   background-color: rgba(255, 255, 255, 0.1);
 }
 
@@ -102,8 +101,8 @@ li:before {
   position: absolute;
   top: 15px;
   right: 15px;
-  color: #12203d;
-  background-color: white;
+  color: #ffffff;
+  background-color: rgb(0, 0, 0);
   width: 100px;
   height: 20px;
   display: flex;
@@ -145,7 +144,7 @@ code {
 label {
   font-size: 20px;
   font-family: "Roboto-Medium";
-  color: white;
+  color: rgb(0, 0, 0);
 }
 
 input {
@@ -157,7 +156,7 @@ input {
   font-size: 20px;
   font-family: "Roboto-Regular";
   margin-bottom: 10px;
-  color: white;
+  color: rgb(0, 0, 0);
   background-color: transparent;
 }
 
